BUG: 262486

The DPMS timeouts are in seconds, not milliseconds. This fix unfortunately requires editing configuration, luckily we haven't released yet.
Users will probably want to edit screen turnoff time manually or start back from a new profile set.

svn path=/trunk/KDE/kdebase/workspace/; revision=1214660